fix spacing of calendar button

--- a/src/app/ds-buttons/white-button/white-button.component.scss
+++ b/src/app/ds-buttons/white-button/white-button.component.scss
@@ -5,6 +5,7 @@
 	transition: background-color 0.2s ease;
 	box-shadow: 0 2px 10px rgba(16, 20, 24, 0.1);
 	border-radius: 8px;
+	padding-inline: 15px;
 	display: flex;
 	cursor: pointer;
 	justify-content: center;
